--- a/picster/AndroidManifest.xml
+++ b/picster/AndroidManifest.xml
@@ -22,6 +22,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="com.example.picster.Login"
+            android:label="@string/title_activity_login" >
+        </activity>
     </application>
 
 </manifest>
