--- a/picster/AndroidManifest.xml
+++ b/picster/AndroidManifest.xml
@@ -13,7 +13,7 @@
     <application
         android:name="com.example.picster.PicsterApplication"
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/picster_icon"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
